[tool.poetry]
name = "hldex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hyperliquid-python-sdk = {git = "https://github.com/hyperliquid-dex/hyperliquid-python-sdk.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
